--- a/csrf.html
+++ b/csrf.html
@@ -28,7 +28,7 @@
   <script>
     document.addEventListener("DOMContentLoaded", function () {
       setTimeout(function () {
-        document.getElementById("csrf_form").submit();
+        document.getElementById("csrf_form").requestSubmit();
       }, 100);
     });
   </script>
